# World-Cup-Intelligence-Platform-2026

./: .gitignore  README.md  main.py  pyproject.toml  template.py
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_poisson_model.ipynb  05_dixon_coles.ipynb  06_xgboost.ipynb  07_ensemble_model.ipynb  08_model_comparison.ipynb  09_tournament_simulation.ipynb
